
	* added a method to the user gateway to find a user's online friends
	* added caching of already retrieved users to the user gateway
	* added a "who of my friends is online" widget
	* fixed the interfaces for additional user/group profile actions, added documentation
	* implemented a method in the application manager to get an instance of a specific widget of an application

2008-10-06 Ingo Renner  <ingo@typo3.org>

	* changed the name of the general sttings branch in TS ffrom common to general
	* added a description field to the create group application
	* initial refactoring of the edit group application
	* fixed the counting of members/admins/pending members in the group model
	* fixed the group profile actions widget to fit the new group model API
	* renamed the groupOverview page property to groupList

2008-10-06 Frank Naegler  <typo3@naegler.net>

	* some changes due to the refactoring of the group model
	* changed the method name from getAllMember to getMembers in tx_community_view_groupprofile_MemberList
	* added ViewHelper to listgroup
	* fix mm tabale name in groupmodel for function getMembers()

2008-10-05 Ingo Renner  <ingo@typo3.org>

	* fixes for the group model
	* fixed the create group application to fit the refactored group model
	* fixed XCLASS definitions
	* fixes to the db table definitions
	* updated emconf

2008-10-02 Ingo Renner  <ingo@typo3.org>

	* added a method to the user gateway to find multiple users by id with one query
	* !!! major refactoring of the group model

2008-10-02 Frank Naegler  <typo3@naegler.net>

	* changed the attribute name from dragable to draggable on all widgets

2008-10-01 Frank Naegler  <typo3@naegler.net>

	* added localizations to some widgets

2008-10-01 Ingo Renner  <ingo@typo3.org>

	* renamed the new group application to create group
	* added dedicated table for groups
	* removed extension fields for fegroups
	* changed the createGroup application to use the new dedicated table for groups