@@ -10,6 +10,7 @@
 	* added a "who of my friends is online" widget
 	* fixed the interfaces for additional user/group profile actions, added documentation
 	* implemented a method in the application manager to get an instance of a specific widget of an application
+	* introduced a method in the abstract application controller to set the requested user
 
 2008-10-06 Ingo Renner  <ingo@typo3.org>
 
